--- a/MDPContainer.vcxproj
+++ b/MDPContainer.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="Container\IntField.h" />
     <ClInclude Include="Container\List.h" />
     <ClInclude Include="Container\ListItem.h" />
+    <ClInclude Include="container\Sequence.h" />
     <ClInclude Include="Container\StringField.h" />
     <ClInclude Include="Container\Work.h" />
   </ItemGroup>
@@ -27,6 +28,7 @@
     <ClCompile Include="Container\Field.cpp" />
     <ClCompile Include="Container\IntField.cpp" />
     <ClCompile Include="Container\main.cpp" />
+    <ClCompile Include="container\Sequence.cpp" />
     <ClCompile Include="Container\StringField.cpp" />
     <ClCompile Include="Container\Work.cpp" />
   </ItemGroup>
@@ -68,12 +70,16 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
