--- a/MDPContainer.vcxproj.filters
+++ b/MDPContainer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Container\Work.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="container\Sequence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Container\DoubleField.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Container\Work.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="container\Sequence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
